--- a/style.css
+++ b/style.css
@@ -40,13 +40,29 @@ body, html{
 
 /* CharCard*/
 
+.charCardTop { 
+/* border:4px solid red; */
+height: 165px;
+width:140px;
+background:white;
+}
+
+.charCardBottom { 
+  /* border:4px solid blue; */
+  height: 165px;
+  width:140px;
+  background:white;
+  }
+  
+
 
 /* this is for the top Image line */
 
 #image-line-top{
   display: flex;
-  align-items:start;
-  height:60%;
+  align-items:flex-start;
+  justify-content:center;
+  height:20%;
   overflow-x: auto;
   margin: 1rem 0;
   max-width: calc(100vw - 2rem);
@@ -54,13 +70,27 @@ body, html{
 
 #image-line-top img {
   flex: 0 1 auto;
-  height: 150px;
+  height: 120px;
+  width:120px;
+  border-radius: 50%;
   margin-right: 0.5rem;
+  margin-left:13px;
+  margin-top:8px;
   cursor: pointer;
+  border:1px solid rgb(54, 54, 54);
+  
+  
 }
 
 #image-line-top img:last-child {
   margin-right: 0;
+}
+
+#image-line-top h3{
+  text-align: center;
+  margin-top:7px;
+  margin-bottom: 0;
+  border:1px solid rgb(54, 54, 54);
 }
 
 /* this is for the Bottom Image line */
@@ -69,15 +99,28 @@ body, html{
 #image-line-bottom{
   display: flex;
   align-items:end;
+  justify-content:center;
+  height:20%;
   overflow-x: auto;
+  margin: 1rem 0;
   max-width: calc(100vw - 2rem);
 }
 
 #image-line-bottom img {
   flex: 0 1 auto;
-  height: 100px;
-  margin-right: 0.5rem;
+  height: 120px;
+  width:120px;
+  border-radius: 50%;
+  margin-left:13px;
   cursor: pointer;
+  border:1px solid rgb(54, 54, 54);
+}
+
+#image-line-bottom h3{
+  margin-top:7px;
+  margin-bottom:7px;
+  text-align: center;
+  border:1px solid rgb(54, 54, 54);
 }
 
 #image-line-bottom img:last-child {
@@ -89,12 +132,10 @@ body, html{
 #middle-line {
   display:flex;
   justify-content: center;
-  
-
 }
 
 #middle-line img{
-  height:350px;
+  height:200px;
 }
 
 #playerOne {
@@ -129,18 +170,19 @@ body, html{
 }
 
 #totalSpaceBetween {
-  height: 250px;
+  height: 100px;
 }
 
 .spacebetween {
-  height: 100px;
+  height: 1px;
 }
 
 /* Ready Button */
 
 #helpMeCenter {
   display:flex;
-  margin-left: 50%;
+  justify-content: center;
+  align-items: center;
 
 }
 
@@ -148,7 +190,6 @@ body, html{
 padding: 20px 0px;
 margin:10px 4px; 
 width:10%;
-justify-content:center;
 color:#fff;
 font-family:sans-serif;
 text-transform:uppercase;
@@ -156,6 +197,7 @@ text-align:center;
 position:relative;
 text-decoration:none;
 display:inline-block;
+background-color:#FF6766;
 }
 
 .buttonsRSF::before {
@@ -189,6 +231,20 @@ transform: scale(1, 1)
 
 /* Forms */
 
+/*
+*/
+
+#versus{
+  display:flex;
+  align-items: center;
+  justify-content: center; 
+
+}
+
+#versuspicture{
+  border-radius: 50%;
+}
+
 
 #mapcreationform{
   display:none;
@@ -204,4 +260,99 @@ ul {
 
 #mainMenu{
   margin-top: 0%;
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  padding-top: 18%;
 }
+
+
+
+body {
+  background: $base;
+  font-family: "Muli";
+}
+/* Button from Online Author: Natalia Reshetnikova;*/
+
+HTML CSSResult Skip Results Iframe
+EDIT ON
+@import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
+
+
+.buttonsOnFrontPage {
+  height: 33.33%;
+  width: 100%; 
+  justify-content: center;
+  align-items: center;
+
+}
+
+.buttonsOnFrontPage { background-color: #FF6766; }
+
+
+.buttonsOnFrontPage {
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  width: 250px;
+  cursor: pointer;
+}
+
+/* 
+========================
+      BUTTON ONE
+========================
+*/
+.buttonsOnFrontPage {
+  color: #FFF;
+  transition: all 0.3s;
+  position: relative;
+  /* background:none;
+  border:none; */
+}
+.buttonsOnFrontPage span {
+  transition: all 0.3s;
+}
+.buttonsOnFrontPage::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(255,255,255,0.5);
+  border-bottom-color: rgba(255,255,255,0.5);
+  transform: scale(0.1, 1);
+}
+.buttonsOnFrontPage:hover span {
+  letter-spacing: 2px;
+}
+.buttonsOnFrontPage:hover::before {
+  opacity: 1; 
+  transform: scale(1, 1); 
+}
+.buttonsOnFrontPage::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.3s;
+  background-color: rgba(255,255,255,0.1);
+}
+.buttonsOnFrontPage:hover::after {
+  opacity: 0; 
+  transform: scale(0.1, 1);
+}
+
+/* */
+
