--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ EDIT ON
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300';
 
 
-.buttonsOnFrontPage {
+.redButtonsThatLookCool {
   height: 33.33%;
   width: 100%; 
   justify-content: center;
@@ -287,10 +287,10 @@ EDIT ON
 
 }
 
-.buttonsOnFrontPage { background-color: #FF6766; }
+.redButtonsThatLookCool { background-color: #FF6766; }
 
 
-.buttonsOnFrontPage {
+.redButtonsThatLookCool {
   line-height: 50px;
   height: 50px;
   text-align: center;
@@ -303,17 +303,17 @@ EDIT ON
       BUTTON ONE
 ========================
 */
-.buttonsOnFrontPage {
+.redButtonsThatLookCool {
   color: #FFF;
   transition: all 0.3s;
   position: relative;
   /* background:none;
   border:none; */
 }
-.buttonsOnFrontPage span {
+.redButtonsThatLookCool span {
   transition: all 0.3s;
 }
-.buttonsOnFrontPage::before {
+.redButtonsThatLookCool::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -331,14 +331,14 @@ EDIT ON
   border-bottom-color: rgba(255,255,255,0.5);
   transform: scale(0.1, 1);
 }
-.buttonsOnFrontPage:hover span {
+.redButtonsThatLookCool:hover span {
   letter-spacing: 2px;
 }
-.buttonsOnFrontPage:hover::before {
+.redButtonsThatLookCool:hover::before {
   opacity: 1; 
   transform: scale(1, 1); 
 }
-.buttonsOnFrontPage::after {
+.redButtonsThatLookCool::after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -349,10 +349,20 @@ EDIT ON
   transition: all 0.3s;
   background-color: rgba(255,255,255,0.1);
 }
-.buttonsOnFrontPage:hover::after {
+.redButtonsThatLookCool:hover::after {
   opacity: 0; 
   transform: scale(0.1, 1);
 }
 
-/* */
+/* This is for the spacing between the characters*/
 
+
+
+
+#boxone{
+  width: 100px;
+}
+
+#boxtwo{
+  width: 100px;
+}
